feat(auth): Implement refresh tokens and token revocation with enhanced security
- Add refresh token functionality and logout endpoint with token invalidation
- Improve JWT handling with proper role enum usage and validation
- Enhance security configuration with stateless sessions and better CSRF protection
- Enable Redis persistence and improve configuration flexibility
- Refactor User entity to use UserRole enums instead of strings
- Add token revocation support with revokedAt timestamp
- Improve error handling and response messages in auth endpoints